--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2023년 버킷리스트</title>
+    <title>2023년 윤삼멤의 인생</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@400;500;600;700&display=swap');
 
@@ -53,15 +53,15 @@
 </head>
 
 <body class="bg-t3 center">
-    <h1 class="title">2023 신년계획</h1>
-    <p class="msg">쪼랑 함께하는 버킷리스트!</p>
+    <h1 class="title">2023 윤삼멤의 인생</h1>
+    <p class="msg">윤삼멤의 버킷리스트!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center done">겨울에 붕어빵 먹기</div>
-        <div class="bucket img2 center done">귤에 초콜릿 찍어먹기</div>
-        <div class="bucket img1 center done">포장마차에서 오뎅이랑 떡볶이먹기</div>
-        <div class="bucket img2-t4 center">도시락싸서 소풍가기</div>
-        <div class="bucket img1 center">김밥천국에서 5개시켜서 먹기</div>
-        <div class="bucket img2-t5 center">눈오는 날 눈사람 만들기</div>
+        <div class="bucket img1-t2 center done">삼성멤버쉽 디자인에 합격하기</div>
+        <div class="bucket img2 center done">연애하기</div>
+        <div class="bucket img1 center ">헬스하기</div>
+        <div class="bucket img2-t4 center">졸업하기</div>
+        <div class="bucket img1 center">졸업해서 삼성들어가기</div>
+        <div class="bucket img2-t5 center">롤 다이아찍기</div>
     </div>
 
 </body>
